// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

// Use relative go package so the generated file is in the current folder.
option go_package = "./proto";
package datacommons;

import "mcf.proto";


// Basic info for an entity (subject or object).
message EntityInfo {
  string name = 1;
  repeated string types = 2;
  string dcid = 3;
  string provenance_id = 4;
  string value = 5;  // Only for object value.
}

message IdWithProperty {
  string prop = 1;
  string val = 2;
}

message EntityIds {
  repeated IdWithProperty ids = 1;
}

// An entity is represented by a subgraph, which contains itself and its neighbors.
message EntitySubGraph {
  // REQUIRED: source_id must be a key within `sub_graph.nodes`, or one of the `ids`.
  string source_id = 1;
  oneof graph_representation {
    McfGraph sub_graph = 2;
    EntityIds entity_ids = 3;
  }
}

message EntityPair {
  EntitySubGraph entity_one = 1;
  EntitySubGraph entity_two = 2;
}